--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3.5'
+
 services:
-  server:
+  zabbix-server:
+    container_name: zabbix-server
     image: zabbix/zabbix-server-pgsql:alpine-latest
     ports:
       - "10051:10051"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      - /etc/timezone:/etc/timezone:ro 
       - /usr/lib/zabbix/alertscripts:/usr/lib/zabbix/alertscripts:ro
       - /usr/lib/zabbix/externalscripts:/usr/lib/zabbix/externalscripts:ro
       - /var/lib/zabbix/export:/var/lib/zabbix/export:rw
@@ -21,20 +23,22 @@ services:
     environment:
       - POSTGRES_USER=zabbix
       - POSTGRES_PASSWORD=zabbix
-      - POSTGRES_DB=zabbix_pwd
+      - POSTGRES_DB=zabbixNew
       - ZBX_HISTORYSTORAGETYPES=log,text #Zabbix configuration variables
       - ZBX_DEBUGLEVEL=1
       - ZBX_HOUSEKEEPINGFREQUENCY=1
       - ZBX_MAXHOUSEKEEPERDELETE=5000
       - ZBX_PROXYCONFIGFREQUENCY=3600
-   
+    networks:
+      - zabbix
+
   web-nginx-pgsql:
     image: zabbix/zabbix-web-nginx-pgsql:alpine-latest
     ports:
       - "8080:8080"
       - "443:8443"
     volumes:
-      - /etc/localtime:/etc/localtime:ro
+- /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       - /etc/ssl/nginx:/etc/ssl/nginx:ro
       - /usr/share/zabbix/modules/:/usr/share/zabbix/modules/:ro
@@ -48,16 +52,18 @@ services:
       - net.core.somaxconn=65535
     restart: always
     depends_on:
-      - server
+      - zabbix-server
       - postgres-server
     environment:
       - POSTGRES_USER=zabbix
       - POSTGRES_PASSWORD=zabbix
-      - POSTGRES_DB=zabbix_pwd
-      - ZBX_SERVER_HOST=server
-      - ZBX_POSTMAXSIZE=64M
+      - POSTGRES_DB=zabbixNew
+      - ZBX_SERVER_HOST=zabbix-server
+- ZBX_POSTMAXSIZE=64M
       - PHP_TZ=Europe/Moscow
       - ZBX_MAXEXECUTIONTIME=500
+    networks:
+      - zabbix
 
   postgres-server:
     image: postgres:latest
@@ -67,12 +73,38 @@ services:
     environment:
       - POSTGRES_PASSWORD=zabbix
       - POSTGRES_USER=zabbix
-      - POSTGRES_DB=zabbix_pwd
+      - POSTGRES_DB=zabbixNew
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+ - zabbix
+
+  zabbix-agent:
+    container_name: zabbix-agent
+    image: zabbix/zabbix-agent2:ubuntu-6.4.9
+    links:
+      - zabbix-server
+    depends_on:
+      - zabbix-server
+    restart: always
+    privileged: true
+    ports:
+      - '10050:10050'
+    environment:
+      - ZBX_HOSTNAME=Zabbix server
+      - ZBX_SERVER_HOST=172.26.0.3
+    networks:
+      - zabbix
+
+networks:
+  zabbix:
+    driver: bridge
 
 
+
+
+    
 
