--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - ZBX_MAXHOUSEKEEPERDELETE=5000
       - ZBX_PROXYCONFIGFREQUENCY=3600
     networks:
-      - zabbix
+      - zabbix_net
 
   web-nginx-pgsql:
     image: zabbix/zabbix-web-nginx-pgsql:alpine-latest
@@ -38,7 +38,7 @@ services:
       - "8080:8080"
       - "443:8443"
     volumes:
-- /etc/localtime:/etc/localtime:ro
+      - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       - /etc/ssl/nginx:/etc/ssl/nginx:ro
       - /usr/share/zabbix/modules/:/usr/share/zabbix/modules/:ro
@@ -59,11 +59,11 @@ services:
       - POSTGRES_PASSWORD=zabbix
       - POSTGRES_DB=zabbixNew
       - ZBX_SERVER_HOST=zabbix-server
-- ZBX_POSTMAXSIZE=64M
+      - ZBX_POSTMAXSIZE=64M
       - PHP_TZ=Europe/Moscow
       - ZBX_MAXEXECUTIONTIME=500
     networks:
-      - zabbix
+      - zabbix_net
 
   postgres-server:
     image: postgres:latest
@@ -80,7 +80,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
- - zabbix
+      - zabbix_net
 
   zabbix-agent:
     container_name: zabbix-agent
@@ -97,13 +97,23 @@ services:
       - ZBX_HOSTNAME=Zabbix server
       - ZBX_SERVER_HOST=172.26.0.3
     networks:
-      - zabbix
+      - zabbix_net
+
+nginx:
+    image: nginx:latest
+    ports:
+      - "80:80" 
+      - "443:443" 
+    volumes:
+      - ./nginx_conf:/etc/nginx/conf.d # Mount the Nginx configuration file
+    networks:
+      - zabbix_net
+    depends_on:
+      - web-nginx-pgsql
 
 networks:
   zabbix:
     driver: bridge
-
-
 
 
     
