--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,13 +99,27 @@ services:
     networks:
       - zabbix_net
 
-nginx:
-    image: nginx:latest
-    ports:
-      - "80:80" 
-      - "443:443" 
+services:
+  web:
+    build: .
+    command: 'bash -c ''node app.js'''
+    working_dir: /usr/src/app
+    environment:
+      PORT: 8050
+      NGINX_PORT: 8443
     volumes:
+      - './views:/app/user/views:ro'
       - ./nginx_conf:/etc/nginx/conf.d # Mount the Nginx configuration file
+      
+  nginx:
+    build: nginx
+    ports:
+      - '8080:80'
+      - '8443:443'
+    links:
+      - web:web
+    volumes_from:
+      - web
     networks:
       - zabbix_net
     depends_on:
