--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,22 +95,10 @@ services:
       - '10050:10050'
     environment:
       - ZBX_HOSTNAME=Zabbix server
-      - ZBX_SERVER_HOST=172.26.0.3
+      - ZBX_SERVER_HOST=zabbix-server
     networks:
       - zabbix_net
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80" # HTTP port
-      - "443:443" # HTTPS port (if enabled)
-    volumes:
-      - ./nginx_conf:/etc/nginx/conf.d # Mount the Nginx configuration file
-    networks:
-      - zabbix_net
-    depends_on:
-      - zabbix-web
-
+      
 networks:
   zabbix_net:
     driver: bridge
